some bug fixes (lots of SAR transactions occured on day 1 due to bugs in fraud taxonomies), tuned config for 10k to get good data distribution